updates UserServiceTests